# guaiaca-dash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yaml
guaiaca_dash/: amount_by_bank_chart_widget.py  amount_by_category_chart_widget.py  amout_by_method_chart_widget.py  amout_by_origin_chart_widget.py  app.py  app_backup.py  auth_using_db.py  auth_widget.py  balance_chart_widget.py  banrisul_statement.py  bradesco_bill.py  c6_bill.py  c6_statement.py  caixa_statement.py  config.json  config.py  config.yaml  csv_extractor.py  data_resume.json  data_widget.py  date_helper.py  digio_bill.py  expense_widget.py  experiments.ipynb  extraction_pattern.json  files_selectbox_widget.py  filesystem.py  logger.py  nubank_bill.py  nubank_statement.py  pdf_extractor.py  string_helper.py  test.py  upload.py  upload_button_widget.py  upload_widget.py  uploader.py
tests/: data_resume.json
