[tool.poetry]
name = "guaiaca-dash"
version = "0.1.0"
description = ""
authors = ["João Pedro Chagas <jpchagas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
streamlit-authenticator = "^0.3.2"
pypdf = "^4.2.0"
pytest = "^8.2.2"
numpy = "^2.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
